--- a/src/app/modules/dashboard/locataire/locataire.component.html
+++ b/src/app/modules/dashboard/locataire/locataire.component.html
@@ -529,9 +529,116 @@
 
                 <!-- Replace with your content -->
                 <div class="rounded-lg h-full lg:h-full">
-                  <ul role="list"
+                  <ul role="list"  
                     class=" mt-1 grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-1 md:grid-cols-2 sm:gap-x-6 lg:grid-cols-3 xl:gap-x-4">
+                   <div  *ngFor = "let good of goods$ | async">
+                    <div class="bg-gray-4  rounded-2xl pb-10">
+                      <div class="space-y-4">
+                        <div class="aspect-h-2 relative">
+                          <img class="object-cover shadow-lg w-full rounded-lg"
+                            src="../../../../assets/images/bien1.png" alt="">
+                          <div class="flex flex-row justify-between items-end px-5 pb-5">
+                            <span
+                              class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
+                              Appartement
+                            </span>
+                            <img src="../../../../assets/images/b-profil.png" alt="">
 
+
+                          </div>
+                        </div>
+
+                        <div class="px-3">
+                          <div class=" leading-6 popping font-semibold space-y-2">
+                            <h3 class="text-lg truncate">{{good.propertyName}}</h3>
+                            <p class="text-base popping font-semibold	">CHF 1400.- / mois</p>
+                            <div class="flex flex-row items-center">
+                              <img src="../../../../assets/images/location-good.png" class="h-4 mr-2" alt="">
+                              <span class="text-blue-2">Genève</span>
+                            </div>
+
+                            <div class="grid grid-cols-2 gap-4">
+                              <div class="flex flex-row items-center">
+                                <img src="../../../../assets/images/good-superificie.png" class="mx-2" alt="">
+                                <span class="lg:text-xs truncate">1000 m2</span>
+                              </div>
+                              <div class="flex flex-row items-center">
+                                <img src="../../../../assets/images/good-beds.png" class="mx-2" alt="">
+                                <span class="lg:text-xs truncate">4 chambres</span>
+                              </div>
+                              <div class="flex flex-row items-center">
+                                <img src="../../../../assets/images/good-toilets.png" class="mx-1" alt="">
+                                <span class="lg:text-xs truncate">2 salles de bain</span>
+                              </div>
+                              <div class="flex flex-row items-center">
+                                <img src="../../../../assets/images/good-toilets.png" class="mx-2" alt="">
+                                <span class="lg:text-xs truncate">1 Garage</span>
+                              </div>
+
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+                    </div>
+
+                   </div>
+                   <div  *ngFor = "let good of goods$ | async">
+                    <div class="bg-gray-4  rounded-2xl pb-10">
+                      <div class="space-y-4">
+                        <div class="aspect-h-2 relative">
+                          <img class="object-cover shadow-lg w-full rounded-lg"
+                            src="../../../../assets/images/bien1.png" alt="">
+                          <div class="flex flex-row justify-between items-end px-5 pb-5">
+                            <span
+                              class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
+                              Appartement
+                            </span>
+                            <img src="../../../../assets/images/b-profil.png" alt="">
+
+
+                          </div>
+                        </div>
+
+                        <div class="px-3">
+                          <div class=" leading-6 popping font-semibold space-y-2">
+                            <h3 class="text-lg truncate">{{good.propertyName}}</h3>
+                            <p class="text-base popping font-semibold	">CHF 1400.- / mois</p>
+                            <div class="flex flex-row items-center">
+                              <img src="../../../../assets/images/location-good.png" class="h-4 mr-2" alt="">
+                              <span class="text-blue-2">Genève</span>
+                            </div>
+
+                            <div class="grid grid-cols-2 gap-4">
+                              <div class="flex flex-row items-center">
+                                <img src="../../../../assets/images/good-superificie.png" class="mx-2" alt="">
+                                <span class="lg:text-xs truncate">1000 m2</span>
+                              </div>
+                              <div class="flex flex-row items-center">
+                                <img src="../../../../assets/images/good-beds.png" class="mx-2" alt="">
+                                <span class="lg:text-xs truncate">4 chambres</span>
+                              </div>
+                              <div class="flex flex-row items-center">
+                                <img src="../../../../assets/images/good-toilets.png" class="mx-1" alt="">
+                                <span class="lg:text-xs truncate">2 salles de bain</span>
+                              </div>
+                              <div class="flex flex-row items-center">
+                                <img src="../../../../assets/images/good-toilets.png" class="mx-2" alt="">
+                                <span class="lg:text-xs truncate">1 Garage</span>
+                              </div>
+
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+                    </div>
+
+                   </div>
+                   
+                 
+                 
+                  <!--
                     <div class="bg-gray-4  rounded-2xl pb-10">
                       <div class="space-y-4">
                         <div class="aspect-h-2 relative">
@@ -1120,56 +1227,7 @@
 
                       </div>
                     </div>
-                    <div class="bg-gray-4  rounded-2xl pb-10">
-                      <div class="space-y-4">
-                        <div class="aspect-h-2 relative">
-                          <img class="object-cover shadow-lg w-full rounded-lg"
-                            src="../../../../assets/images/bien1.png" alt="">
-                          <div class="flex flex-row justify-between items-end px-5 pb-5">
-                            <span
-                              class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
-                              Appartement
-                            </span>
-                            <img src="../../../../assets/images/b-profil.png" alt="">
-
-
-                          </div>
-                        </div>
-
-                        <div class="px-3">
-                          <div class=" leading-6 popping font-semibold space-y-2">
-                            <h3 class="text-lg truncate">Magnifique appartement</h3>
-                            <p class="text-base popping font-semibold	">CHF 1400.- / mois</p>
-                            <div class="flex flex-row items-center">
-                              <img src="../../../../assets/images/location-good.png" class="h-4 mr-2" alt="">
-                              <span class="text-blue-2">Genève</span>
-                            </div>
-
-                            <div class="grid grid-cols-2 gap-4">
-                              <div class="flex flex-row items-center">
-                                <img src="../../../../assets/images/good-superificie.png" class="mx-2" alt="">
-                                <span class="lg:text-xs truncate">1000 m2</span>
-                              </div>
-                              <div class="flex flex-row items-center">
-                                <img src="../../../../assets/images/good-beds.png" class="mx-2" alt="">
-                                <span class="lg:text-xs truncate">4 chambres</span>
-                              </div>
-                              <div class="flex flex-row items-center">
-                                <img src="../../../../assets/images/good-toilets.png" class="mx-1" alt="">
-                                <span class="lg:text-xs truncate">2 salles de bain</span>
-                              </div>
-                              <div class="flex flex-row items-center">
-                                <img src="../../../../assets/images/good-toilets.png" class="mx-2" alt="">
-                                <span class="lg:text-xs truncate">1 Garage</span>
-                              </div>
-
-                            </div>
-                          </div>
-                        </div>
-
-                      </div>
-                    </div>
-
+                  -->
                     <!-- More files... -->
                   </ul>
                 </div>
