--- a/src/app/modules/dashboard/locataire/locataire-home/locataire-home.component.html
+++ b/src/app/modules/dashboard/locataire/locataire-home/locataire-home.component.html
@@ -531,51 +531,99 @@
 
                             <!-- Replace with your content -->
                             <div class="rounded-lg h-full lg:h-full">
-                                <ul role="list"
+                                <ul *ngIf="!(loading$|async)" role="list"
+                                    class=" mt-1 grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-1 md:grid-cols-2 sm:gap-x-6 lg:grid-cols-3 xl:gap-x-4">
+                                    <div class="border border-blue-300 shadow rounded-md p-4 max-w-sm w-full mx-auto">
+                                        <div class="animate-pulse flex space-x-4">
+                                            <div class="rounded-full bg-blue-400 h-12 w-12"></div>
+                                            <div class="flex-1 space-y-4 py-1">
+                                                <div class="h-4 bg-blue-400 rounded w-3/4"></div>
+                                                <div class="space-y-2">
+                                                    <div class="h-4 bg-blue-400 rounded"></div>
+                                                    <div class="h-4 bg-blue-400 rounded w-5/6"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="border border-blue-300 shadow rounded-md p-4 max-w-sm w-full mx-auto">
+                                        <div class="animate-pulse flex space-x-4">
+                                            <div class="rounded-full bg-blue-400 h-12 w-12"></div>
+                                            <div class="flex-1 space-y-4 py-1">
+                                                <div class="h-4 bg-blue-400 rounded w-3/4"></div>
+                                                <div class="space-y-2">
+                                                    <div class="h-4 bg-blue-400 rounded"></div>
+                                                    <div class="h-4 bg-blue-400 rounded w-5/6"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="border border-blue-300 shadow rounded-md p-4 max-w-sm w-full mx-auto">
+                                        <div class="animate-pulse flex space-x-4">
+                                            <div class="rounded-full bg-blue-400 h-12 w-12"></div>
+                                            <div class="flex-1 space-y-4 py-1">
+                                                <div class="h-4 bg-blue-400 rounded w-3/4"></div>
+                                                <div class="space-y-2">
+                                                    <div class="h-4 bg-blue-400 rounded"></div>
+                                                    <div class="h-4 bg-blue-400 rounded w-5/6"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </ul>
+                                <ul *ngIf="(loading$|async)" role="list"
                                     class=" mt-1 grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-1 md:grid-cols-2 sm:gap-x-6 lg:grid-cols-3 xl:gap-x-4">
                                     <div *ngFor="let good of goods$ | async">
-                                        <div class="bg-gray-4  rounded-2xl pb-10" (click)="goodDetails(good)">
+                                        <div class="bg-gray-4  rounded-2xl pb-10 hover:cursor-pointer"
+                                            (click)="goodDetails(good)">
                                             <div class="space-y-4">
-                                                <div class="aspect-h-2 relative">
-                                                    <img class="object-cover shadow-lg w-full rounded-lg"
-                                                        src="../../../../assets/images/bien1.png" alt="">
-                                                    <div class="flex flex-row justify-between items-end px-5 pb-5">
+                                                <div class="aspect-w-4 aspect-h-2 relative">
+                                                    <img class="object-c -->over shadow-lg rounded-lg w-fullh-full"
+                                                        *ngIf="good.mediaFiles"
+                                                        [defaultImage]="'../../../../../../assets/images/blank.png'"
+                                                        [lazyLoad]="good.mediaFiles[0]" />
+
+
+                                                    <div class="flex flex-row justify-between items-end px-5 pb-30">
                                                         <span
-                                                            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
-                                                            Appartement
+                                                            class="inline-flex items-center mb-5  px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
+                                                            {{(good.propertyType |split:",")[0]}}
                                                         </span>
-                                                        <img src="../../../../assets/images/b-profil.png" alt="">
-
-
+                                                        <img src="../../../../assets/images/b-profil.png "
+                                                            class="translate-y-3" alt="">
                                                     </div>
                                                 </div>
 
                                                 <div class="px-3">
                                                     <div class=" leading-6 popping font-semibold space-y-2">
                                                         <h3 class="text-lg truncate">{{good.propertyName}}</h3>
-                                                        <p class="text-base popping font-semibold	">CHF 1400.- / mois
+                                                        <p class="text-base popping font-semibold	">CHF
+                                                            {{good.grossPrice}}.- / mois
                                                         </p>
                                                         <div class="flex flex-row items-center">
                                                             <img src="../../../../assets/images/location-good.png"
                                                                 class="h-4 mr-2" alt="">
-                                                            <span class="text-blue-2">Genève</span>
+                                                            <span class="text-blue-2">{{good.address}}</span>
                                                         </div>
 
                                                         <div class="grid grid-cols-2 gap-4">
                                                             <div class="flex flex-row items-center">
                                                                 <img src="../../../../assets/images/good-superificie.png"
                                                                     class="mx-2" alt="">
-                                                                <span class="lg:text-xs truncate">1000 m2</span>
+                                                                <span class="lg:text-xs truncate">{{good.livingSpace}}
+                                                                    m2</span>
                                                             </div>
                                                             <div class="flex flex-row items-center">
                                                                 <img src="../../../../assets/images/good-beds.png"
                                                                     class="mx-2" alt="">
-                                                                <span class="lg:text-xs truncate">4 chambres</span>
+                                                                <span
+                                                                    class="lg:text-xs truncate">{{good.numberOfPieces}}
+                                                                    chambres</span>
                                                             </div>
                                                             <div class="flex flex-row items-center">
                                                                 <img src="../../../../assets/images/good-toilets.png"
                                                                     class="mx-1" alt="">
-                                                                <span class="lg:text-xs truncate">2 salles de
+                                                                <span class="lg:text-xs truncate">{{good.numberOfWC}}
+                                                                    salles de
                                                                     bain</span>
                                                             </div>
                                                             <div class="flex flex-row items-center">
@@ -592,71 +640,10 @@
                                         </div>
 
                                     </div>
-                                    <div *ngFor="let good of goods$ | async">
-                                        <div class="bg-gray-4  rounded-2xl pb-10">
-                                            <div class="space-y-4">
-                                                <div class="aspect-h-2 relative">
-                                                    <img class="object-cover shadow-lg w-full rounded-lg"
-                                                        src="../../../../assets/images/bien1.png" alt="">
-                                                    <div class="flex flex-row justify-between items-end px-5 pb-5">
-                                                        <span
-                                                            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-pink-100 text-pink-800">
-                                                            Appartement
-                                                        </span>
-                                                        <img src="../../../../assets/images/b-profil.png" alt="">
-
-
-                                                    </div>
-                                                </div>
-
-                                                <div class="px-3">
-                                                    <div class=" leading-6 popping font-semibold space-y-2">
-                                                        <h3 class="text-lg truncate">{{good.propertyName}}</h3>
-                                                        <p class="text-base popping font-semibold	">CHF 1400.- / mois
-                                                        </p>
-                                                        <div class="flex flex-row items-center">
-                                                            <img src="../../../../assets/images/location-good.png"
-                                                                class="h-4 mr-2" alt="">
-                                                            <span class="text-blue-2">Genève</span>
-                                                        </div>
-
-                                                        <div class="grid grid-cols-2 gap-4">
-                                                            <div class="flex flex-row items-center">
-                                                                <img src="../../../../assets/images/good-superificie.png"
-                                                                    class="mx-2" alt="">
-                                                                <span class="lg:text-xs truncate">1000 m2</span>
-                                                            </div>
-                                                            <div class="flex flex-row items-center">
-                                                                <img src="../../../../assets/images/good-beds.png"
-                                                                    class="mx-2" alt="">
-                                                                <span class="lg:text-xs truncate">4 chambres</span>
-                                                            </div>
-                                                            <div class="flex flex-row items-center">
-                                                                <img src="../../../../assets/images/good-toilets.png"
-                                                                    class="mx-1" alt="">
-                                                                <span class="lg:text-xs truncate">2 salles de
-                                                                    bain</span>
-                                                            </div>
-                                                            <div class="flex flex-row items-center">
-                                                                <img src="../../../../assets/images/good-toilets.png"
-                                                                    class="mx-2" alt="">
-                                                                <span class="lg:text-xs truncate">1 Garage</span>
-                                                            </div>
-
-                                                        </div>
-                                                    </div>
-                                                </div>
-
-                                            </div>
-                                        </div>
-
-                                    </div>
-
-
-
-                           
-                                    <!-- More files... -->
                                 </ul>
+                                <div class="text-center" *ngIf="(loading$|async) && (goods$|async)?.length == 0">
+                                    <span class="text-base font-bold">Aucun bien</span>
+                                </div>
                             </div>
                             <!-- /End replace -->
                         </div>
