--- a/src/app/modules/dashboard/locataire/good-detail/good-detail.component.html
+++ b/src/app/modules/dashboard/locataire/good-detail/good-detail.component.html
@@ -83,12 +83,12 @@
             <div class="pt-5">
                 <div class=" leading-6 popping font-semibold space-y-2">
                     <h3 class="text-base md:text-3xl  leading-6 md:leading-9 	">
-                        Magnifique appartement T2 situé au coeur de Genève
+                        {{good.propertyName}}
                     </h3>
                     <div class="flex flex-row items-center">
                         <img src="../../../../assets/images/location-good.png" class="h-4 mr-2" alt="">
                         <span class="text-blue-2 popping font-normal text-sm md:text-xl  truncate ">
-                            {{good.propertyName}}
+                            {{good.address}}
                         </span>
                     </div>
                     <ul class="flex pt-5 flex-row items-center flex-wrap list-disc	 ">
