--- a/src/app/modules/dashboard/locataire/good-detail/good-detail.component.html
+++ b/src/app/modules/dashboard/locataire/good-detail/good-detail.component.html
@@ -20,8 +20,8 @@
                     <div
                         class="absolute inset-0 z-50 transition-all ease-in-out duration-1000 transform translate-x-0 slide">
                     </div>
-                    <div
-                        class="absolute aspect-w-1 z-50	 w-16 h-16 left-auto right-0  top-1/2 -translate-y-1/2 cursor-pointer  ">
+                    <div class="absolute aspect-w-1 z-50	 w-16 h-16 left-auto right-0  top-1/2 -translate-y-1/2 cursor-pointer  "
+                        (click)="nextSlide()">
                         <svg width="41" height="58" viewBox="0 0 41 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g filter="url(#filter0_d)">
                                 <path
@@ -45,8 +45,8 @@
 
 
                     </div>
-                    <div
-                        class=" px-5 aspect-w-1 z-50 left-0	top-1/2 -translate-y-1/2 w-16 h-16 mr-16 justify-center  cursor-pointer">
+                    <div class=" px-5 aspect-w-1 z-50 left-0	top-1/2 -translate-y-1/2 w-16 h-16 mr-16 justify-center  cursor-pointer"
+                        (click)="previousSlide()">
                         <svg width="41" height="58" viewBox="0 0 41 58" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g filter="url(#filter0_d)">
                                 <path
