--- a/src/app/modules/dashboard/locataire/good-detail/good-detail.component.html
+++ b/src/app/modules/dashboard/locataire/good-detail/good-detail.component.html
@@ -322,7 +322,7 @@
                 <span class="text-base text-gray-500 font-semibold">Loyer</span>
             </div>
             <div class="my-3 text-center md:text-left">
-                <span class="text-2xl font-bold mr-3">34.000 CHF</span>
+                <span class="text-2xl font-bold mr-3">{{good.grossPrice}} CHF</span>
                 <span class="text-2xl">par mois</span>
             </div>
             <button
